// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`services/validation/createField.jsx handle events 1`] = `undefined`;

exports[`services/validation/createField.jsx rendering 1`] = `
<_class2>
  <div
    className="an-validation-field an-error-layout-bottom"
  >
    <div
      className="an-validation-field__wrap an-field-layout-row"
    >
      <div
        className="an-validation-field__content"
      >
        <Input
          ariaLabel="Input box"
          icon={false}
          inputRef={[Function]}
          onChange={[Function]}
          onEnter={[Function]}
          onError={[Function]}
          onLeave={[Function]}
          onValueChange={[Function]}
          size="md"
          type="text"
        >
          <div
            className="input-group input-group--md"
          >
            <input
              aria-label="Input box"
              className="input input-group__field input__field"
              onBlur={[Function]}
              onChange={[Function]}
              onError={[Function]}
              onInput={[Function]}
              onKeyPress={[Function]}
              onPaste={[Function]}
              type="text"
            />
          </div>
        </Input>
      </div>
    </div>
  </div>
</_class2>
`;

exports[`services/validation/createField.jsx rendering 2`] = `
<_class2
  customMessages="test message"
>
  <div
    className="an-validation-field an-error-layout-bottom"
  >
    <div
      className="an-validation-field__wrap an-field-layout-row"
    >
      <div
        className="an-validation-field__content"
      >
        <Input
          ariaLabel="Input box"
          icon={false}
          inputRef={[Function]}
          onChange={[Function]}
          onEnter={[Function]}
          onError={[Function]}
          onLeave={[Function]}
          onValueChange={[Function]}
          size="md"
          type="text"
        >
          <div
            className="input-group input-group--md"
          >
            <input
              aria-label="Input box"
              className="input input-group__field input__field"
              onBlur={[Function]}
              onChange={[Function]}
              onError={[Function]}
              onInput={[Function]}
              onKeyPress={[Function]}
              onPaste={[Function]}
              type="text"
            />
          </div>
        </Input>
      </div>
    </div>
  </div>
</_class2>
`;

exports[`services/validation/createField.jsx rendering 3`] = `
<_class2
  customMessages=""
>
  <div
    className="an-validation-field an-error-layout-bottom"
  >
    <div
      className="an-validation-field__wrap an-field-layout-row"
    >
      <div
        className="an-validation-field__content"
      >
        <Input
          ariaLabel="Input box"
          icon={false}
          inputRef={[Function]}
          onChange={[Function]}
          onEnter={[Function]}
          onError={[Function]}
          onLeave={[Function]}
          onValueChange={[Function]}
          size="md"
          type="text"
        >
          <div
            className="input-group input-group--md"
          >
            <input
              aria-label="Input box"
              className="input input-group__field input__field"
              onBlur={[Function]}
              onChange={[Function]}
              onError={[Function]}
              onInput={[Function]}
              onKeyPress={[Function]}
              onPaste={[Function]}
              type="text"
            />
          </div>
        </Input>
      </div>
    </div>
  </div>
</_class2>
`;

exports[`services/validation/createField.jsx rendering 4`] = `
<_class2
  customMessages={
    Array [
      "array messages",
    ]
  }
>
  <div
    className="an-validation-field an-error-layout-bottom"
  >
    <div
      className="an-validation-field__wrap an-field-layout-row"
    >
      <div
        className="an-validation-field__content"
      >
        <Input
          ariaLabel="Input box"
          icon={false}
          inputRef={[Function]}
          onChange={[Function]}
          onEnter={[Function]}
          onError={[Function]}
          onLeave={[Function]}
          onValueChange={[Function]}
          size="md"
          type="text"
        >
          <div
            className="input-group input-group--md"
          >
            <input
              aria-label="Input box"
              className="input input-group__field input__field"
              onBlur={[Function]}
              onChange={[Function]}
              onError={[Function]}
              onInput={[Function]}
              onKeyPress={[Function]}
              onPaste={[Function]}
              type="text"
            />
          </div>
        </Input>
      </div>
    </div>
  </div>
</_class2>
`;

exports[`services/validation/createField.jsx rendering 5`] = `
<_class2
  customMessages={
    Array [
      "array messages",
    ]
  }
  showError={true}
  showLabel={true}
>
  <div
    className="an-validation-field an-error-layout-bottom"
  >
    <div
      className="an-validation-field__wrap an-field-layout-row"
    >
      <span
        className="an-validation-field__label"
      />
      <div
        className="an-validation-field__content"
      >
        <Input
          ariaLabel="Input box"
          icon={false}
          inputRef={[Function]}
          onChange={[Function]}
          onEnter={[Function]}
          onError={[Function]}
          onLeave={[Function]}
          onValueChange={[Function]}
          size="md"
          type="text"
        >
          <div
            className="input-group input-group--md"
          >
            <input
              aria-label="Input box"
              className="input input-group__field input__field"
              onBlur={[Function]}
              onChange={[Function]}
              onError={[Function]}
              onInput={[Function]}
              onKeyPress={[Function]}
              onPaste={[Function]}
              type="text"
            />
          </div>
        </Input>
      </div>
    </div>
    <ErrorList
      className="an-validation-field__error"
      messages={
        Array [
          "array messages",
        ]
      }
    >
      <div
        className="an-error-list an-validation-field__error"
      >
        <div
          className="an-error"
          key="0"
        >
          <span
            className="icon aaui-alert-error-icon icon-times-circle"
          />
          <span>
            array messages
          </span>
        </div>
      </div>
    </ErrorList>
  </div>
</_class2>
`;

exports[`services/validation/createField.jsx rendering 6`] = `
<_class2
  customMessages={
    Array [
      "array messages",
    ]
  }
  showError={true}
  showLabel={true}
>
  <div
    className="an-validation-field an-error-layout-bottom"
  >
    <div
      className="an-validation-field__wrap an-field-layout-row"
    >
      <span
        className="an-validation-field__label"
      />
      <div
        className="an-validation-field__content"
      >
        <Input
          ariaLabel="Input box"
          icon={false}
          inputRef={[Function]}
          onChange={[Function]}
          onEnter={[Function]}
          onError={[Function]}
          onLeave={[Function]}
          onValueChange={[Function]}
          size="md"
          type="text"
        >
          <div
            className="input-group input-group--md"
          >
            <input
              aria-label="Input box"
              className="input input-group__field input__field"
              onBlur={[Function]}
              onChange={[Function]}
              onError={[Function]}
              onInput={[Function]}
              onKeyPress={[Function]}
              onPaste={[Function]}
              type="text"
            />
          </div>
        </Input>
      </div>
    </div>
    <ErrorList
      className="an-validation-field__error"
      messages={Array []}
    >
      <div
        className="an-error-list an-validation-field__error"
      />
    </ErrorList>
  </div>
</_class2>
`;
